--- a/board/templates/base.html
+++ b/board/templates/base.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="logo">
-      <h1>Welcom to /{{board_conf.name}}/</h1>
+      <h1>Welcome to /{{board_conf.name}}/</h1>
     </div>
     <div class="formarea">
       <form method = "post" enctype="multipart/form-data">{% csrf_token %}
