--- a/board/templates/detail.html
+++ b/board/templates/detail.html
@@ -12,12 +12,10 @@
  {%for post in posts%}
    <table>
      <td class="doubledash">>></td>
-     <td>
-       <div class="post" id="post_{{post.id}}">
-         {% block post %}
-           {% include "post.html" with post=post %}
-         {% endblock %}
-       </div>
+     <td class="post" id="post_{{post.id}}">
+       {% block post %}
+         {% include "post.html" with post=post %}
+       {% endblock %}
      </td>
    </table>
  {% endfor %}
